    task traversal/logging implementation
    - added an automatic "row switch" feature to mapping, which will
    detect a pending instance/deleted instance pair with the same 
    identity key and convert the INSERT/DELETE to a single UPDATE
    - "association" mappings simplified to take advantage of 
    automatic "row switch" feature
    - added "viewonly" flag to relation(), allows construction of
    relations that have no effect on the flush() process.
    - added "lockmode" argument to base Query select/get functions, 
    including "with_lockmode" function to get a Query copy that has 
    a default locking mode.  Will translate "read"/"update" 
    arguments into a for_update argument on the select side.
    [ticket:292]
    - implemented "version check" logic in Query/Mapper, used
    when version_id_col is in effect and query.with_lockmode()
    is used to get() an instance thats already loaded
    - post_update behavior improved; does a better job at not 
    updating too many rows, updates only required columns
    [ticket:208]
    - adjustments to eager loading so that its "eager chain" is
    kept separate from the normal mapper setup, thereby
    preventing conflicts with lazy loader operation, fixes 
    [ticket:308]
    - fix to deferred group loading
    - added "batch=True" flag to mapper; if False, save_obj
    will fully save one object at a time including calls
    to before_XXXX and after_XXXX
    - specifying joins in the from_obj argument of query.select() will
    replace the main table of the query, if the table is somewhere within
    the given from_obj.  this makes it possible to produce custom joins and
    outerjoins in queries without the main table getting added twice.
    [ticket:315]
    - eagerloading is adjusted to more thoughtfully attach its LEFT OUTER JOINs
    to the given query, looking for custom "FROM" clauses that may have 
    already been set up.